--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,11 +34,12 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  firebase_core: ^2.4.1
-  firebase_auth: ^4.6.1
-  google_sign_in: ^6.1.0
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  google_sign_in: ^6.2.1
   http: ^1.2.2
   fl_chart: ^0.68.0
+  firebase_crashlytics: ^3.4.9
 
 
 dev_dependencies:
