--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   http: ^1.2.2
   fl_chart: ^0.68.0
   firebase_crashlytics: ^3.4.9
+  syncfusion_flutter_charts: ^26.1.42
 
 
 dev_dependencies:
