--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   fl_chart: ^0.68.0
   firebase_crashlytics: ^3.4.9
   syncfusion_flutter_charts: ^26.1.42
+  dio: ^5.5.0+1
+  logger: ^2.4.0
+  provider: ^6.1.2
 
 
 dev_dependencies:
